[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.10.3"
flask = "^2.2.3"
flask-cors = "^3.0.10"
marshmallow = "^3.19.0"
pyjwt = "^2.6.0"
pymysql = "^1.0.3"
sqlalchemy = "^2.0.9"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.3"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # flake8-print
    "T20",
    # Ruff-specific rules
    "RUF",
]

# Same as Black.
line-length = 88

target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "main"
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
